--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,44 @@ input[type="submit"] { cursor: pointer; }
 	margin: 150px auto;
 	width: 300px;
 }
+#text-block {
+	margin: 150px auto;
+	width: 600px;
+}
+
+
+#text-block h1 {
+	background-color: #282830;
+	border-radius: 5px 5px 0 0;
+	color: #fff;
+	font-size: 14px;
+	padding: 20px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+#text-block fieldset {
+	background: #fff;
+	border-radius: 0 0 5px 5px;
+	padding: 20px;
+	position: relative;
+}
+
+#text-block fieldset:before {
+	background-color: #fff;
+	content: "";
+	height: 8px;
+	left: 50%;
+	margin: -4px 0 0 -4px;
+	position: absolute;
+	top: 0;
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg);
+	width: 8px;
+}
 
 #login-form h1 {
 	background-color: #282830;
